--- a/shadower/utils/CMakeLists.txt
+++ b/shadower/utils/CMakeLists.txt
@@ -8,6 +8,7 @@ add_library(utils
     src/ue_dl_utils.cc
     src/gnb_ul_utils.cc
     src/gnb_dl_utils.cc
+    src/ue_ul_utils.cc
     src/dci_utils.cc
     msg_helper.cc
 )
