--- a/docker/configs/gnb_fdd.yml
+++ b/docker/configs/gnb_fdd.yml
@@ -16,8 +16,9 @@ cu_cp:
               - sst: 1
 
 ru_sdr:
-  device_driver: uhd                                              # The RF driver name.
-  device_args: type=b200                                          # Optionally pass arguments to the selected RF driver.
+  device_driver: uhd
+  # device_args: type=b200,num_recv_frames=64,num_send_frames=64
+  device_args: address=192.168.10.2
   srate: 23.04                                                    # RF sample rate might need to be adjusted according to selected bandwidth.
   otw_format: sc12
   tx_gain: 80                                                     # Transmit gain of the RF might need to adjusted to the given situation.
@@ -33,9 +34,9 @@ cell_cfg:
   pci: 1                                                          # Physical cell ID.
 
 log:
-  filename: /root/srsran/logs/gnb.log                              # Path of the log file.
+  filename: /logs/gnb.log                              # Path of the log file.
   all_level: debug                                                 # Logging level applied to all layers. 
 
 pcap:
   mac_enable: true                                                 # Set to true to enable MAC-layer PCAPs.
-  mac_filename: /root/srsran/logs/gnb_mac.pcap                     # Path where the MAC PCAP is stored.
+  mac_filename: /logs/gnb_mac.pcap                     # Path where the MAC PCAP is stored.
