--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        BUILD_CORES: ${BUILD_CORES:-0}
     container_name: sni5gect
     privileged: true
     restart: unless-stopped
@@ -11,54 +13,57 @@ services:
     network_mode: host
     volumes:
       - "/dev/:/dev/"
-    deploy:
-      resources:
-        reservations:
-          cpus: '1'
-          memory: 1G
+      - type: bind
+        source: "./configs/sniffer"
+        target: /root/sni5gect/configs
+        read_only: true
 
-  srsran:
-    build:
-      context: .
-      dockerfile: Dockerfile
-      target: srsran5g
-    image: srsran
-    container_name: srsran
-    restart: unless-stopped
-    privileged: true
-    command: sleep infinity
-    volumes:
-      - "/dev/bus/usb/:/dev/bus/usb/"
-    network_mode: host
+  # srsran:
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile
+  #     target: srsran5g
+  #     args:
+  #       BUILD_CORES: ${BUILD_CORES:-0}
+  #   image: srsran
+  #   container_name: srsran
+  #   restart: unless-stopped
+  #   privileged: true
+  #   command: sleep infinity
+  #   volumes:
+  #     - "/dev/bus/usb/:/dev/bus/usb/"
+  #   network_mode: host
 
-  open5gs:
-    build:
-      context: .
-      dockerfile: Dockerfile
-      target: open5gs
-    image: open5gs
-    container_name: open5gs
-    restart: unless-stopped
-    privileged: true
-    command: sleep infinity
-    network_mode: host
-    depends_on:
-      mongodb:
-        condition: service_healthy
+  # open5gs:
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile
+  #     target: open5gs
+  #     args:
+  #       BUILD_CORES: ${BUILD_CORES:-0}
+  #   image: open5gs
+  #   container_name: open5gs
+  #   restart: unless-stopped
+  #   privileged: true
+  #   command: sleep infinity
+  #   network_mode: host
+  #   depends_on:
+  #     mongodb:
+  #       condition: service_healthy
 
-  mongodb:
-    image: mongo:8.0
-    container_name: mongodb
-    restart: unless-stopped
-    volumes:
-      - dbdata:/data/db
-    network_mode: host
-    healthcheck:
-      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
-      interval: 5s
-      timeout: 5s
-      retries: 3
-      start_period: 5s
+  # mongodb:
+  #   image: mongo:8.0
+  #   container_name: mongodb
+  #   restart: unless-stopped
+  #   volumes:
+  #     - dbdata:/data/db
+  #   network_mode: host
+  #   healthcheck:
+  #     test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
+  #     interval: 5s
+  #     timeout: 5s
+  #     retries: 3
+  #     start_period: 5s
 
 volumes:
   dbdata:
