--- a/docker/configs/gnb_tdd.yml
+++ b/docker/configs/gnb_tdd.yml
@@ -18,7 +18,7 @@ cu_cp:
 ru_sdr:
   device_driver: uhd
   # device_args: type=b200
-  device_args: address=192.168.10.2
+  device_args: addr=192.168.10.2
   srate: 23.04                                          # RF sample rate might need to be adjusted according to selected bandwidth.
   otw_format: sc12
   tx_gain: 80                                           # Transmit gain of the RF might need to adjusted to the given situation.
